contrast error fixes

--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -192,7 +192,6 @@ button {
     border: none;
     border-radius: 5px;
     background-color: #C5802A;
-    color: white;
     font-size: 16px;
     cursor: pointer;
 }
@@ -251,6 +250,9 @@ button:hover {
 }
 #previous-reviews p{
     text-align: center;
+}
+.card-content p{
+    color: black;
 }
 footer{
     background-color: #3D6082;
